Added persistence of experiment results